postgresql-9.3 (9.3~devel) UNRELEASED; urgency=low

  * Update for 9.3devel.
  * Remove 03-python-includedirs.patch, implemented upstream.
  * libpq5.symbols: Add new symbols: PQconninfo, lo_lseek64, lo_tell64,
    lo_truncate64.

 -- Christoph Berg <myon@debian.org>  Thu, 03 Jan 2013 12:00:48 +0100

postgresql-9.2 (9.2.2-2) UNRELEASED; urgency=low

  * Add 03-python-includedirs.patch: Detect both python3.3 include locations.
    Thanks Dmitrijs Ledkovs!

 -- Martin Pitt <mpitt@debian.org>  Sat, 08 Dec 2012 15:40:46 +0100

postgresql-9.2 (9.2.2-1) experimental; urgency=low

  * New upstream bug fix release. See HISTORY/changelog.gz details.
  * debian/control, debian/rules: Build against krb5-multidev, to allow use
    while heimdal-dev is installed. Thanks Jelmer Vernooij! (Closes: #664881)
  * debian/control: Force p-client to use libpq5 from at least our upstream
    version, as -client tends to use private ABI and behaviour that is not
    covered by symbols files.

 -- Martin Pitt <mpitt@debian.org>  Mon, 03 Dec 2012 22:38:48 +0000

postgresql-9.2 (9.2.1-1) experimental; urgency=low

  [ Martin Pitt ]
  * New upstream bug fix release:
    - Fix persistence marking of shared buffers during WAL replay.
      This mistake can result in buffers not being written out during
      checkpoints, resulting in data corruption if the server later
      crashes without ever having written those buffers. Corruption can
      occur on any server following crash recovery, but it is
      significantly more likely to occur on standby slave servers since
      those perform much more WAL replay. There is a low probability of
      corruption of btree and GIN indexes. There is a much higher
      probability of corruption of table "visibility maps", which might
      lead to wrong answers from index-only scans. Table data proper
      cannot be corrupted by this bug.
      While no index corruption due to this bug is known to have occurred