@@ -4,8 +4,12 @@ postgresql-9.3 (9.3~devel) UNRELEASED; urgency=low
   * Remove 03-python-includedirs.patch, implemented upstream.
   * libpq5.symbols: Add new symbols: PQconninfo, lo_lseek64, lo_tell64,
     lo_truncate64.
+  * debian/rules: Use quilt again. (For the devel build, we are a native
+    package because we do not have an orig file.)
+  * debian/rules: Skip override_dh_installchangelogs because git doesn't ship
+    a HISTORY file.
 
- -- Christoph Berg <myon@debian.org>  Thu, 03 Jan 2013 12:00:48 +0100
+ -- Christoph Berg <myon@debian.org>  Thu, 03 Jan 2013 17:15:37 +0100
 
 postgresql-9.2 (9.2.2-2) UNRELEASED; urgency=low
 
